added images to webpages

--- a/web_app/templates/hello.html
+++ b/web_app/templates/hello.html
@@ -5,6 +5,9 @@
 
     <h1>{{ message }}</h1>
 
+    <h2>Hello, welcome to Bryan's web app</h2>
     <p>This is a paragraph on the "hello" page.</p>
+
+    <img src="https://miro.medium.com/max/1024/1*OohqW5DGh9CQS4hLY5FXzA.png" alt="hello world">
 
 {% endblock %}
