--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -5,6 +5,6 @@
 
     <h1>Welcome Home</h1>
 
-    <p>This is a paragraph on the "home" page.</p>
+    <p>This is a paragraph on the "home" page. Thanks for visiting my web app.</p>
 
 {% endblock %}
