--- a/web_app/templates/bootstrap_layout.html
+++ b/web_app/templates/bootstrap_layout.html
@@ -80,8 +80,8 @@
 
         <footer style="margin-top:2em; margin-bottom:2em;">
         <hr>
-            &copy; Copyright 2021 [Your Name Here] |
-            <a href="https://github.com/prof-rossetti/________">source</a>
+            &copy; Copyright 2021 Copyright 2021 [Bryan Zhou, Prof. Michael Rossetti] |
+            <a href="https://github.com/prof-rossetti/intro-to-python/">source</a>
         </footer>
     </div>
 
