--- a/web_app/templates/layout.html
+++ b/web_app/templates/layout.html
@@ -25,7 +25,7 @@
     <!-- FOOTER -->
     <footer>
       <hr>
-      &copy; Copyright 2021 [Your Name Here] |
+      &copy; Copyright 2021 [Bryan Zhou, Prof. Michael Rossetti] |
       <a href="https://github.com/prof-rossetti/intro-to-python/">source</a>
     </footer>
   </div>
